--- a/style.css
+++ b/style.css
@@ -1,2 +1,28 @@
-< !doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Bootstrap demo</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"></head><body><h1>Hello,
-world !</h1><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script></body></html>
+/* carousel part */
+.carousel-item h1,
+h2 {
+    font-weight: 700;
+}
+
+.all-button {
+    background-color: #FF2D80;
+    color: white;
+    font-weight: 700;
+}
+
+.carousel-item .row {
+    background-color: #FCEAE8;
+}
+
+
+/* categories part */
+.categories img {
+    width: 45%;
+}
+
+.text-sent-part {
+    background-color: #FCEAE8;
+    padding: 50px 0;
+}
+
+/* responsive part */
